fixed spacing on home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,21 +13,35 @@ body {
 .title {
   height: 160px;
   width: 1000px;
-  margin-left: 100px;
+  margin-left: 140px;
   background-color: white;
 }
 
+.flower{
+  padding-top: 25px;
+  padding-left: 95px;
+  padding-right: 10px;
+  float: left;
+}
+
 .name {
-  margin-left: 85px;
-  padding-top: 5px;
+  padding-top: 10px;
+  float: left;
+  width: 500px;
+  height: 160px;
+}
+
+.cranio {
+  padding-left: 95px;
+  margin-top: 1px;
 }
 
 .carousel {
-  height: 150px;
-  width: 170px;
+  height: 155px;
+  width: 250px;
   float: right;
-  margin-top: -72px;
-  margin-right: 70px;
+ /* padding-top: 3px;*/
+  margin-right: 42px;
 }
 
 .carousel-indicators{
@@ -35,37 +49,51 @@ body {
 }
 
 .gloria {
+  padding-left: 20px;
   font-size: 45px;
+  padding-top: 2px;
 }
 
 .line {
-  height: 6px;
+  height: 4px;
   background-color: #006600;
   width: 1000px;
-  margin-left: 100px;
+  margin-left: 140px;
 }
 
-.pages {
-  height: 39px;
+.line1 {
+  height: 4px;
+  background-color: #006600;
   width: 1000px;
-  margin-left: 100px;
-  background-color: white;
-  /*margin-top: 5px;*/
+  margin-left: 140px;
+  margin-bottom: -40px;
+}
+
+.line2 {
+  height: 4px;
+  background-color: #006600;
+  width: 1000px;
+  margin-left: 140px;
+  /*margin-bottom: -30px;*/
+  margin-top: -25px;
+  margin-bottom: 10px;
 }
 
 .pagination {
-  /*margin-top: -1px;*/
-  width: 1002px;
+  height: 40px;
+  width: 1001px;
+  margin-left: 140px;
+  background-color: white;
+  margin-top: 70px;
+  border-bottom: 2px;
 }
 
 .page {
   height: 40px;
   text-align: center;
-  width: 250px;
+  width: 251px;
   font-size: 20px;
-  /*margin-top: -80px;*/
   margin-left: 100px;
-  clear: all;
 }
 
 .page.hover {
@@ -75,8 +103,9 @@ body {
 .info {
   width: 1000px;
   height: 500px;
-  margin-left: 100px;
+  margin-left: 140px;
   background-color: white;
+  margin-top: -10px;
 }
 
 p, ol, ul, td {
